--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -10,10 +10,10 @@
   </div>
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
-      <li class="active"><a href="http://sara-cireddu.github.io/index2.html">sito cucina sarda</a></li>
+      <li class="active"><a href="http://sara-cireddu.github.io/index2.html">Il mio sito</a></li>
        <li><a href="#test.html">TEST</a></li>
-      <li><a href="#about.html">About</a></li>
-      <li><a href="#contact.html">Contact</a></li>
+      <li><a href="#capitolo1.html">Capitolo 1</a></li>
+      <li><a href="#capitolo2.html">Capitolo 2</a></li>
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Lista amici <b class="caret"></b></a>
         <ul class="dropdown-menu">
