--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -11,7 +11,7 @@
   <div class="navbar-collapse collapse">
     <ul class="nav navbar-nav">
       <li class="active"><a href="http://sara-cireddu.github.io/index2.html">Il mio sito</a></li>
-       <li><a href="#test.html">TEST</a></li>
+       <li><a href="#introduzione.html">Introduzione</a></li>
       <li><a href="#capitolo1.html">Capitolo 1</a></li>
       <li><a href="#capitolo2.html">Capitolo 2</a></li>
       <li class="dropdown">
