--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,5 +1,5 @@
 <body>
-  <body role="document" style="backgroud:burlywood;">
+  <body style="backgroud:burlywood;">
 </body>
 <div class="container">
   <div class="navbar-header">
