--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,3 +1,4 @@
+  <body style="backgroud:burlywood;">
 <div class="container">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -29,3 +30,4 @@
     </ul>
   </div><!--/.nav-collapse -->
 </div>
+</body>
