--- a/src/templates/navbar.html
+++ b/src/templates/navbar.html
@@ -1,4 +1,5 @@
-  <body style="backgroud:burlywood;">
+  <body role="document" style="backgroud:burlywood;">
+  
 <div class="container">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
