--- a/src/templates/introduzione.html
+++ b/src/templates/introduzione.html
@@ -1,3 +1,4 @@
+<body role="document" style="background:darkkhaki;">
 <h3>
   <center>
     <font color=gold>
@@ -11,3 +12,4 @@
     <i>Questa è l'introduzione della mia tesi</i>
   </right>
 </h4>
+</body>
