--- a/src/templates/introduzione.html
+++ b/src/templates/introduzione.html
@@ -1,4 +1,5 @@
-<body role="document" style="background:darkkhaki;">
+<body>
+<bodi style="background:darkkhaki;">
 <h3>
   <center>
     <font color=gold>
