--- a/src/templates/introduzione.html
+++ b/src/templates/introduzione.html
@@ -1,5 +1,5 @@
-<body>
-<bodi style="background:darkkhaki;">
+<head>
+<body style="background:darkkhaki;">
 <h3>
   <center>
     <font color=gold>
@@ -13,4 +13,4 @@
     <i>Questa è l'introduzione della mia tesi</i>
   </right>
 </h4>
-</body>
+</head>
