--- a/src/templates/introduzione.html
+++ b/src/templates/introduzione.html
@@ -1,6 +1,8 @@
+<html>
 <head>
 <body style="background:darkkhaki;">
 </head>
+<body>
 <h3>
   <center>
     <font color=gold>
@@ -14,4 +16,5 @@
     <i>Questa è l'introduzione della mia tesi</i>
   </right>
 </h4>
-
+</body>
+</html>
